fix overflow

--- a/src/sass/components/_section-hero.scss
+++ b/src/sass/components/_section-hero.scss
@@ -35,7 +35,7 @@
 }
 
 .section-hero__container {
-  overflow: visible;
+  overflow: hidden;
   position: relative;
   padding-top: 110px;
   padding-bottom: 255px;
